[gd_scene load_steps=3 format=3 uid="uid://c2m7u5y3a7r2k"]

[ext_resource type="Script" uid="uid://d4p6u2w8h9k1s" path="res://scripts/main/mod_manager.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_window"]
bg_color = Color(0.16, 0.16, 0.16, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="ModManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_script")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.55)

[node name="Window" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -290.0
offset_right = 500.0
offset_bottom = 290.0
mouse_filter = 0
clip_contents = true
theme_override_styles/panel = SubResource("StyleBoxFlat_window")

[node name="Margin" type="MarginContainer" parent="Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="Root" type="VBoxContainer" parent="Window/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Window/Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Window/Margin/Root/Header"]
layout_mode = 2
text = "模组管理"

[node name="HeaderSpacer" type="Control" parent="Window/Margin/Root/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Window/Margin/Root/Header"]
layout_mode = 2
custom_minimum_size = Vector2(96, 34)
text = "关闭"

[node name="Body" type="HBoxContainer" parent="Window/Margin/Root"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="LeftColumn" type="VBoxContainer" parent="Window/Margin/Root/Body"]
layout_mode = 2
custom_minimum_size = Vector2(320, 0)
size_flags_vertical = 3

[node name="ModList" type="ItemList" parent="Window/Margin/Root/Body/LeftColumn"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftButtons" type="HBoxContainer" parent="Window/Margin/Root/Body/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RefreshButton" type="Button" parent="Window/Margin/Root/Body/LeftColumn/LeftButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 38)
text = "刷新"

[node name="DeleteButton" type="Button" parent="Window/Margin/Root/Body/LeftColumn/LeftButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 38)
disabled = true
text = "删除"

[node name="Separator" type="VSeparator" parent="Window/Margin/Root/Body"]
layout_mode = 2

[node name="RightColumn" type="VBoxContainer" parent="Window/Margin/Root/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Window/Margin/Root/Body/RightColumn"]
layout_mode = 2
custom_minimum_size = Vector2(206, 178)
stretch_mode = 5

[node name="ModTitleLabel" type="Label" parent="Window/Margin/Root/Body/RightColumn"]
layout_mode = 2
text = "未选择模组"

[node name="ModInfoText" type="RichTextLabel" parent="Window/Margin/Root/Body/RightColumn"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_active = true

[node name="MessageDialog" type="AcceptDialog" parent="."]
title = "提示"

[node name="ConfirmDeleteDialog" type="ConfirmationDialog" parent="."]
title = "确认删除"

